plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'checkstyle'
}

group = 'it.rate'
version = '1.0.1'

java {
    sourceCompatibility = '17'
}

springBoot {
    buildInfo()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring and others
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql:42.6.0'
    runtimeOnly 'com.h2database:h2'

    // security
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
    implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.20.0'
    implementation 'com.google.api-client:google-api-client:1.29.2'

    // email
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'

    // image processing
    implementation 'net.coobird:thumbnailator:0.4.20' //Image editor
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'



}

tasks.named('test') {
    useJUnitPlatform()
}
